data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_892.wast
;; 3. **Loop with Conditional Function Calls and Return Values**:    - Description: Implement a loop with `br_if` instructions dependent on function call results. The return values should influence loop continuation or termination.    - Constraint: Validate that branching based on return values is correctly performed and return types are verified.    - Relation: Incorrect return value handling can mislead loop control flow.

(assert_invalid
  (module
    (func $loop_conditional_func_calls (result i32) 
      (local $val i32)
      (local.set $val (i32.const 1))
      (loop (result i32)
        (br_if 1 (call $is_condition_met (local.get $val)))
        (local.set $val (call $update_value (local.get $val)))
      )
    )
    (func $is_condition_met (param i32) (result i32)
      ;; Stub function returning a value used for conditional branching
      (i32.const 0)
    )
    (func $update_value (param i32) (result i32)
      ;; Stub function updating the value for the loop
      (i32.const 0)
    )
  )
  "type mismatch"
)